--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <!-- Header -->
 <header>
+    <link rel="shortcut icon" type="image/png" href="/img/grey_circle_txt_48.png">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
