--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,7 +16,7 @@
                         <img src="{{ site.baseurl }}/{{ post.img }}" class="img-responsive img-centered" alt="">
                         {{ post.content }}
                         <ul class="list-inline item-details">
-                            <li>Category:
+                            <!-- <li>Category:
                                 <strong>{{ post.category }}
                                     </strong>
                             </li>
@@ -24,8 +24,8 @@
                                 <strong>{{ post.date | date: "%B %Y" }}
                                     </strong>
                             </li>
-                        </ul>
-                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </ul> -->
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Volver</button>
                     </div>
                 </div>
             </div>
