--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>Cont&aacutectenos</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -14,29 +14,29 @@
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                <label>Su nombre</label>
+                                <input type="text" class="form-control" placeholder="Su nombre" id="name" required data-validation-required-message="Por favor, introduzca su nombre.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <label>Su correo electr&oacutenico</label>
+                                <input type="email" class="form-control" placeholder="Su correo electrónico" id="email" required data-validation-required-message="Por favor, introduzca su correo electrónico.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                <label>Su n&uacutemero de tel&eacutefono</label>
+                                <input type="tel" class="form-control" placeholder="Su número de teléfono" id="phone" required data-validation-required-message="Por favor, introduzca su número de teléfono.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <label>Su consulta</label>
+                                <textarea rows="5" class="form-control" placeholder="Su consulta" id="message" required data-validation-required-message="Por favor, introduzca un consulta."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -44,7 +44,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
+                                <button type="submit" class="btn btn-success btn-lg">Enviar</button>
                             </div>
                         </div>
                     </form>
