cambio de texto about

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Info1.</p>
+                    <p>Un equipo de Ingenieros Técnicos de Telecomunicaciones e Industriales, expertos Integradores de servicios junto con nuestros experimentados Instaladores autorizados nos permienten afrontar los retos que nos planteen sus necesidades para encontrar las mejores soluciones.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Info2.</p>
+                    <p>Una empresa joven y dinámica a su servicio.</p>
                 </div>
             </div>
         </div>
