cambio about y descripción

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <p>Un equipo de Ingenieros Técnicos de Telecomunicaciones e Industriales, expertos Integradores de servicios junto con nuestros experimentados Instaladores autorizados nos permienten afrontar los retos que nos planteen sus necesidades para encontrar las mejores soluciones.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Una empresa joven y dinámica a su servicio.</p>
+                    <p>Somos una empresa joven y dinámica a su servicio.</p>
                 </div>
             </div>
         </div>
