Se añade info sobre nosotros

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <p>Un equipo de Ingenieros Técnicos de Telecomunicaciones e Industriales, expertos Integradores de servicios junto con nuestros experimentados Instaladores autorizados nos permienten afrontar los retos que nos planteen sus necesidades para encontrar las mejores soluciones.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Somos una empresa joven y dinámica a su servicio.</p>
+                    <p>Somos una empresa joven, dinámica y flexible a su servicio. En nuestra empresa tenemos una estructura donde todas las áreas son escuchadas, en la que el aporte de cada uno es valorado y en la que el cliente es uno más de nuestro equipo. </p>
                 </div>
             </div>
         </div>
