--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,20 +7,33 @@
 
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-    <!-- Bootswatch Core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <!-- Bootswatch Core CSS
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+    
+    <!--CSS para centrado de cada bloque, maquetado de menú y pie así como ocultación de las entradas-->
+    
+    <link rel="stylesheet" href="/css/bootstrap.min.css"> 
 
-    <!-- Freelancer Theme CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-freelancer/1.1.0/css/freelancer.min.css">
+
+    <!-- Freelancer Theme CSS 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-freelancer/1.1.0/css/freelancer.min.css"> -->
+
+    <!--CSS para el color de fondo y la organización general-->
+
+    <link rel="stylesheet" href="/css/freelancer.min.css"> 
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ " /feed.xml " | prepend: site.baseurl | prepend: site.url }}">
 
-    <!-- Custom Fonts -->
-    <link href="http://sbootstrap-freelancer.startbootstrapc.netdna-cdn.com/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Custom Fonts CSS para el tipo de letra iconos especiales (es opcional)
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">-->
+    <link href="http://sbootstrap-freelancer.startbootstrapc.netdna-cdn.com/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    
+    <!--CSS para el tipo de letra iconos especiales (es opcional)
+    
+    <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
     
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
