--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
 
     <!--CSS para el color de fondo y la organización general-->
 
-    <link rel="stylesheet" href="/css/freelancer.min.css"> 
+    <link rel="stylesheet" href="/css/freelancer.min.ordenada.css"> 
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
