--- a/css/freelancer.min.ordenada.css
+++ b/css/freelancer.min.ordenada.css
@@ -1,3 +1,5 @@
+/*Color de fondo C3E4ED*/
+
 body {
 	font-family:Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;overflow-x:hidden}
 
@@ -8,7 +10,7 @@ p.small {
 	font-size:16px}
 	
 a,a.active,a:active,a:focus,a:hover{ 
-	color:#18BC9C;
+	color:#9AC0CD;
 	outline:0}
 
 h1,h2,h3,h4,h5,h6 {
@@ -41,7 +43,7 @@ hr.star-light {
 	border-color:#fff}
 	
 hr.star-light:after {
-	background-color:#18BC9C;
+	background-color:#9AC0CD;
 	color:#fff}
 	
 hr.star-primary {
@@ -59,7 +61,7 @@ hr.star-primary:after {
 	
 header {
 	text-align:center;
-	background:#18BC9C}
+	background:#9AC0CD}
 	
 header .container {
 	padding-top:100px;
@@ -100,14 +102,14 @@ header .intro-text .skills {
 	letter-spacing:1px}
 	
 .navbar-custom .navbar-nav li a:hover{
-	color:#18BC9C;
+	color:#9AC0CD;
 	outline:0}
 	
 .navbar-custom .navbar-nav li a:active,.navbar-custom .navbar-nav li a:focus{
 	color:#fff}
 	
 .navbar-custom .navbar-nav li.active a,.navbar-custom .navbar-nav li.active a:active,.navbar-custom .navbar-nav li.active a:focus,.navbar-custom .navbar-nav li.active a:hover{
-	color:#fff;background:#18BC9C}
+	color:#fff;background:#9AC0CD}
 	
 .navbar-custom .navbar-toggle{
 	color:#fff;
@@ -116,9 +118,9 @@ header .intro-text .skills {
 	border-color:#fff}
 	
 .navbar-custom .navbar-toggle:focus,.navbar-custom .navbar-toggle:hover{
-	background-color:#18BC9C;
+	background-color:#9AC0CD;
 	color:#fff;
-	border-color:#18BC9C}
+	border-color:#9AC0CD}
 	
 @media (min-width:768px){
 	.navbar-custom{
@@ -145,7 +147,7 @@ section h2{
 	font-size:3em}
 	
 section.success{
-	background:#18BC9C;
+	background:#9AC0CD;
 	color:#fff}
 	
 @media (max-width:767px){
@@ -166,7 +168,8 @@ section.success{
  	margin:0 auto}
  	
 #portfolio .portfolio-item .portfolio-link .caption{
-	background:rgba(24,188,156,.9);
+	background:rgba(195, 228, 237, 0.9);
+	/*background:rgba(24,188,156,.9); color original delta */
 	position:absolute;
 	width:100%;
 	height:100%;
@@ -248,7 +251,7 @@ section.success{
 	top:0;opacity:1}
 	
 .floating-label-form-group-with-focus label{
-	color:#18BC9C}
+	color:#9AC0CD}
 	
 form .row:first-child .floating-label-form-group{
 	border-top:1px solid #eee}
@@ -279,7 +282,7 @@ footer .footer-below{
 	margin-top:15px}
 	
 .btn-outline.active,.btn-outline:active,.btn-outline:focus,.btn-outline:hover{
-	color:#18BC9C;
+	color:#9AC0CD;
 	background:#fff;
 	border:2px solid #fff}
 	
@@ -307,8 +310,8 @@ footer .footer-below{
 
 .btn-success{
 	color:#fff;
-	background-color:#18BC9C;
-	border-color:#18BC9C;
+	background-color:#9AC0CD;
+	border-color:#9AC0CD;
 	font-weight:700}
 	
 .btn-success.active,.btn-success:active,.btn-success:focus,.btn-success:hover,.open .dropdown-toggle.btn-success{
@@ -317,11 +320,11 @@ footer .footer-below{
 	border-color:#11866f}
 	
 .btn-success.disabled,.btn-success.disabled.active,.btn-success.disabled:active,.btn-success.disabled:focus,.btn-success.disabled:hover,.btn-success[disabled],.btn-success[disabled].active,.btn-success[disabled]:active,.btn-success[disabled]:focus,.btn-success[disabled]:hover,fieldset[disabled] .btn-success,fieldset[disabled] .btn-success.active,fieldset[disabled] .btn-success:active,fieldset[disabled] .btn-success:focus,fieldset[disabled] .btn-success:hover{
-	background-color:#18BC9C;
-	border-color:#18BC9C}
+	background-color:#9AC0CD;
+	border-color:#9AC0CD}
 	
 .btn-success .badge{
-	color:#18BC9C;
+	color:#9AC0CD;
 	background-color:#fff}
 	
 .btn-social{
