--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>Sobre {{ site.title }}</h3>
-                    <p><a href="http://www.telectric.es">{{ site.title }}</a> {{ site.description2 }}.</p>
+                    <p><a href="http://www.telectric.es/#about">{{ site.title }}</a> {{ site.description2 }}.</p>
                 </div>
             </div>
         </div>
