--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,6 +26,9 @@
                 <li class="page-scroll">
                     <a href="#contact">Contacto</a>
                 </li>
+		<li class="page-scroll">
+                    <a href="/blog">Bit&aacute;cora</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
