cambios en contactos

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,54 +1,147 @@
 <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Cont&aacutectenos</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Su nombre</label>
-                                <input type="text" class="form-control" placeholder="Su nombre" id="name" required data-validation-required-message="Por favor, introduzca su nombre.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Su correo electr&oacutenico</label>
-                                <input type="email" class="form-control" placeholder="Su correo electrónico" id="email" required data-validation-required-message="Por favor, introduzca su correo electrónico.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Su n&uacutemero de tel&eacutefono</label>
-                                <input type="tel" class="form-control" placeholder="Su número de teléfono" id="phone" required data-validation-required-message="Por favor, introduzca su número de teléfono.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Su consulta</label>
-                                <textarea rows="5" class="form-control" placeholder="Su consulta" id="message" required data-validation-required-message="Por favor, introduzca un consulta."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Enviar</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+<section id="contact">
+<div class="container">
+   
+<div class="row">
+ <div class="col-lg-12 text-center">
+ 	<h2>Contacte con nosotros para...</h2>
+     	<hr class="star-primary">
+ </div>
+</div>
+    
+<div class="row">
+ <div class="col-lg-12 text-center">
+ 	<h3>Telecomunicaciones</h3>
+  </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaci&oacute;n y reparaci&oacute;n de TDT</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaci&oacute;n y reparaci&oacute;n de TV SaT</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaci&oacute;n de cableado estructurado (cable de red)</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaci&oacute;n IPBX y tel&eacute;fonos IP</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaci&oacute;n reparaci&oacute;n FTTH</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Servicios inform&aacute;ticos especiales</p>
+ </div>
+</div>
+
+<div class="row">
+ <div class="col-lg-12 text-center">
+ 	<h3>Electricidad</h3>
+  </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaciones el&eacute;ctricas en baja tensi&oacute;n</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Proyectos de instalaciones el&eacute;ctricas en baja tensi&oacute;n</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaci&oacute;n y reparaci&oacute;n de porteros autom&aacute;ticos</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Licencia de apertura</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaciones y proyectos de fotovoltaica</p>
+ </div>
+</div>
+
+<div class="row">
+ <div class="col-lg-12 text-center">
+ 	<h3>Dom&oacute;tica</h3>
+  </div>
+</div>
+
+  
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaci&oacute;n de c&aacute;maras IP (CCTV)</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Dom&oacute;tica y automatizaci&oacute;n en el hogar</p>
+ </div>
+</div>
+
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Sonido en el hogar como interfonos e hilo musical</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Control de accesos, alarmas y detectores de presencia</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaciones contra incendios, contaminaci&oacute;n y gases t&oacute;xicos</p>
+ </div>
+</div>
+
+<div class="row">
+ <div class="col-lg-12 text-center">
+ 	<h3>Calefaci&oacute;n</h3>
+  </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaci&oacute;n de calderas y termostatos inteligentes</p>
+ </div>
+</div>
+
+<div class="row control-group">
+ <div class="col-lg-12 text-center">
+    	<p>Instalaciones y proyectos de termosolar</p>
+ </div>
+</div>
+
+</div>
+</section>
