Cambio profundo en presentación de servicios

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,18 +17,21 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
+                
                 <li class="page-scroll">
                     <a href="#portfolio">Servicios</a>
-                </li>
+                </li>                                    
+                
+                
                 <li class="page-scroll">
                     <a href="#about">Nosotros</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#contact">Contacto</a>
+                    <a href="#footer">Contacto</a>
                 </li>
-		<li class="page-scroll">
+		<!--<li class="page-scroll">
                     <a href="/blog">Bit&aacute;cora</a>
-                </li>
+                </li>-->
             </ul>
         </div>
         <!-- /.navbar-collapse -->
