--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -13,7 +13,7 @@
                     <div class="modal-body">
                         <h2>{{ post.title }}</h2>
                         <hr class="star-primary">
-                        <img src="{{ site.baseurl }}/{{ post.img }}" class="img-responsive img-centered" alt="">
+                        <!--<img src="{{ site.baseurl }}/{{ post.img }}" class="img-responsive img-centered" alt=""> -->
                         {{ post.content }}
                         <ul class="list-inline item-details">
                             <!-- <li>Category:
@@ -25,7 +25,7 @@
                                     </strong>
                             </li>
                         </ul> -->
-                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Volver</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Retornar a página de inicio</button>
                     </div>
                 </div>
             </div>
