--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,12 +3,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Servicios</h2>
+                    <h2 id="Electricidad">Electricidad</h2>
                     <hr class="star-primary">
                 </div>
             </div>
+                                 
             <div class="row">
                 {% for post in site.posts %}
+		  {% if post.category contains 'Electricidad' %}
                     <div class="col-sm-4 portfolio-item">
                         <a href="#{{ post.modalID }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
@@ -19,7 +21,107 @@
                             <img src="{{ site.baseurl }}/{{ post.img }}" class="img-responsive" alt="">
                         </a>
                     </div>
+		  {% endif %}
                 {% endfor %}
             </div>
+            
+             <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Telecomunicaciones</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            
+            <div class="row">
+                {% for post in site.posts %}
+		  {% if post.category contains 'Telecomunicaciones' %}
+                    <div class="col-sm-4 portfolio-item">
+                        <a href="#{{ post.modalID }}" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-search-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img src="{{ site.baseurl }}/{{ post.img }}" class="img-responsive" alt="">
+                        </a>
+                    </div>
+		  {% endif %}
+                {% endfor %}
+            </div>
+            
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Dómotica y hogar digital</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            
+            <div class="row">
+                {% for post in site.posts %}
+		  {% if post.category contains 'Domotica' %}
+                    <div class="col-sm-4 portfolio-item">
+                        <a href="#{{ post.modalID }}" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-search-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img src="{{ site.baseurl }}/{{ post.img }}" class="img-responsive" alt="">
+                        </a>
+                    </div>
+		  {% endif %}
+                {% endfor %}
+            </div>
+            
+           
+            
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Seguridad perimetral</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            
+            <div class="row">
+                {% for post in site.posts %}
+		  {% if post.category contains 'Seguridad' %}
+                    <div class="col-sm-4 portfolio-item">
+                        <a href="#{{ post.modalID }}" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-search-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img src="{{ site.baseurl }}/{{ post.img }}" class="img-responsive" alt="">
+                        </a>
+                    </div>
+		  {% endif %}
+                {% endfor %}
+            </div>
+            
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Ciberseguridad y Software</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            
+            <div class="row">
+                {% for post in site.posts %}
+		  {% if post.category contains 'Ciberseguridad' %}
+                    <div class="col-sm-4 portfolio-item">
+                        <a href="#{{ post.modalID }}" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-search-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img src="{{ site.baseurl }}/{{ post.img }}" class="img-responsive" alt="">
+                        </a>
+                    </div>
+		  {% endif %}
+                {% endfor %}
+            </div>
+            
         </div>
     </section>
