Cambio en título de algunos servicios

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 id="Electricidad">Electricidad</h2>
+                    <h2 id="Electricidad">Electricidad y Energía</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -27,7 +27,7 @@
             
              <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Telecomunicaciones</h2>
+                    <h2>Telecomunicaciones y Telefonía</h2>
                     <hr class="star-primary">
                 </div>
             </div>
