cambio de ficheros

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,16 +18,16 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#portfolio">Servicios</a>
+                    <a href="#domotica">Particulares</a>
                 </li>
                 <li class="page-scroll">
                     <a href="#about">Nosotros</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#contact">Contacto</a>
+                    <a href="#pyme">PyME</a>
                 </li>
 		<li class="page-scroll">
-                    <a href="/blog">Bit&aacute;cora</a>
+                    <a href="#pie">Contacto</a>
                 </li>
             </ul>
         </div>
