--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,13 @@
 
     {% include header.html %}
 
-    {% include portfolio.html %}
+    {% include particulares.html %}
 
-    {% include about.html %}
+    {% include nosotros.html %}
 
-    {% include contact.html %}
+    {% include empresas.html %}
 
-    {% include footer.html %}
+    {% include pie.html %}
 
     {% include modals.html %}
 
