--- a/_includes/empresas.html
+++ b/_includes/empresas.html
@@ -1,9 +1,10 @@
-<!-- Portfolio Grid Section -->
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
+<!-- Contact Section -->
+<section id="pyme">
+    <section  id="portfolio">
+        <div  class="container">
+             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Servicios</h2>
+                    <h2>Servicios para empresas</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -23,3 +24,4 @@
             </div>
         </div>
     </section>
+</section>
