--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,11 @@
             <div class="col-lg-12">
                 <img class="img-responsive" src="img/profile.png" alt="">
                 <div class="intro-text">
-                    <span class="name">{{ site.title }}</span>
-                    <hr class="star-light">
-                    <span class="skills">{{ site.description }}</span>
+                    <!--<span class="name">{{ site.title }}</span>
+                    <hr class="star-light"> 
+                    <span class="skills">{{ site.description }}</span>-->
+                    <hr class="star-light"> 
+                    <h2>{{ site.description }}</h2>
                 </div>
             </div>
         </div>
