--- a/_includes/pie.html
+++ b/_includes/pie.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 <footer class="text-center">
-    <div class="footer-above">
+    <div id="pie" class="footer-above">
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-4">
@@ -72,7 +72,7 @@
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>Sobre {{ site.title }}</h3>
-                    <p><a href="http://www.telectric.es/#about">{{ site.title }}</a> {{ site.description2 }}.</p>
+                    <p><a href="{{ site.url }}#about">{{ site.title }}</a> <br> {{ site.description }}</p>
                 </div>
             </div>
         </div>
