Cambio de la web

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -25,7 +25,7 @@
                                     </strong>
                             </li>
                         </ul> -->
-                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Volver</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Retornar a página anterior</button>
                     </div>
                 </div>
             </div>
