--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     {% include header.html %}
 
-    {% include particulares.html %}
+    {% include hogar.html %}
 
     {% include nosotros.html %}
 
