--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,7 +18,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#domotica">Particulares</a>
+                    <a href="#domotica">hogar</a>
                 </li>
                 <li class="page-scroll">
                     <a href="#about">Nosotros</a>
