nuevos ficheros y estructura

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,13 @@
 
     {% include header.html %}
 
-    {% include hogar.html %}
+    {% include proyectos.html %}
 
+    {% include instalaciones.html %}
+
+    {% include servicios.html %}
+ 
     {% include nosotros.html %}
-
-    {% include empresas.html %}
 
     {% include pie.html %}
 
