--- a/_includes/servicios.html
+++ b/_includes/servicios.html
@@ -4,7 +4,7 @@
         <div  class="container">
              <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Servicios para empresas</h2>
+                    <h2>Servicios</h2>
                     <hr class="star-primary">
                 </div>
             </div>
