--- a/_includes/servicios.html
+++ b/_includes/servicios.html
@@ -9,7 +9,8 @@
                 </div>
             </div>
             <div class="row">
-                {% for post in site.servicios %}
+                {% for post in site.posts %}
+			{% if post.categories contains 'servicios'%}
                     <div class="col-sm-4 portfolio-item">
                         <a href="#{{ post.modalID }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
@@ -20,6 +21,7 @@
                             <img src="{{ site.baseurl }}/{{ post.img }}" class="img-responsive" alt="">
                         </a>
                     </div>
+			{% endif %}
                 {% endfor %}
             </div>
         </div>
