--- a/_includes/proyectos.html
+++ b/_includes/proyectos.html
@@ -10,7 +10,7 @@
             </div>
             <div class="row">
                 {% for post in site.posts %}
-			{% if post.categories contains 'proyectos'%}
+			{% if post.categories contains 'proyectos' or post.categories contains 'Proyectos'%}
                     <div class="col-sm-4 portfolio-item">
                         <a href="#{{ post.modalID }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
