--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,14 +17,18 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
+		<li class="page-scroll">
+                    <a href="#proyectos">Proyectos</a>
+                </li>
+
                 <li class="page-scroll">
-                    <a href="#domotica">hogar</a>
+                    <a href="#instalaciones">Instalaciones</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#about">Nosotros</a>
+                    <a href="#servicios">Servicios</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#pyme">PyME</a>
+                    <a href="#nostros">Nosotros</a>
                 </li>
 		<li class="page-scroll">
                     <a href="#pie">Contacto</a>
