--- a/_includes/pie.html
+++ b/_includes/pie.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>Sobre {{ site.title }}</h3>
-                    <p><a href="{{ site.url }}#about">{{ site.title }}</a> <br> {{ site.description }}</p>
+                    <p><a href="{{ site.url }}#nosotros">{{ site.title }}</a> <br> {{ site.description }}</p>
                 </div>
             </div>
         </div>
