--- a/_includes/proyectos.html
+++ b/_includes/proyectos.html
@@ -1,5 +1,5 @@
 <!-- Contact Section -->
-<section id="pyme">
+<section id="proyectos">
     <section  id="portfolio">
         <div  class="container">
              <div class="row">
