--- a/_includes/servicios.html
+++ b/_includes/servicios.html
@@ -1,5 +1,5 @@
 <!-- Contact Section -->
-<section id="pyme">
+<section id="servicios">
     <section  id="portfolio">
         <div  class="container">
              <div class="row">
